# rust-p2p-usb

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_QUALITY_REPORT.md  INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PHASE5_IMPLEMENTATION_REPORT.md  PHASE7_REPORT.md  PROJECT_STATUS.md  README.md  test_phase7_config.sh
.claude/: mcp-servers.json
.claude/agents/: codebase-documenter.md  network-latency-expert.md  root-cause-analyzer.md  rust-expert.md  rust-latency-optimizer.md
.claude/commands/: bench.md  build.md  cross-rpi.md  quality.md  test.md
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs
crates/client/src/network/: client.rs  connection.rs  device_proxy.rs  health.rs  mod.rs  session.rs  streams.rs
crates/client/src/tui/: app.rs  events.rs  mod.rs  qr.rs  ui.rs
crates/client/src/virtual_usb/: README.md  device.rs  interrupt_receive_buffer.rs  linux.rs  macos.rs  mod.rs  socket_bridge.rs  usbip_protocol.rs  windows.rs
crates/client/tests/: integration_tests.rs
crates/common/: Cargo.toml
crates/common/src/: alpn.rs  channel.rs  error.rs  iroh_ext.rs  keys.rs  lib.rs  logging.rs  metrics.rs  rate_limiter.rs  test_utils.rs  usb_types.rs
crates/common/tests/: rate_limiter_tests.rs  usb_bridge_tests.rs
crates/protocol/: Cargo.toml
crates/protocol/benches/: serialization.rs
crates/protocol/src/: codec.rs  error.rs  integrity.rs  lib.rs  messages.rs  types.rs  version.rs
crates/protocol/tests/: integration.rs  protocol_tests.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  config.rs  main.rs  policy.rs  qos.rs  service.rs
crates/server/src/network/: connection.rs  mod.rs  notification_aggregator.rs  server.rs  session.rs  streams.rs
crates/server/src/tui/: app.rs  events.rs  mod.rs  qr.rs  ui.rs
crates/server/src/usb/: device.rs  interrupt_buffer.rs  manager.rs  mod.rs  sharing.rs  transfer.rs  transfers.rs  worker.rs
crates/server/tests/: config_tests.rs  device_access_tests.rs  integration_tests.rs  policy_tests.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  COMPRESSION_DESIGN.md  CROSS_PLATFORM_STRATEGY.md  DEPLOYMENT.md  DEVELOPMENT.md  DIAGRAMS.md  IMPLEMENTATION_ROADMAP.md  PHASE1_IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  REASONING_REPORT.md  SYSTEMD.md  VHCI_INVESTIGATION.md  VHCI_PROGRESS.md
docs/research/: data_integrity_research_2026-01.md
examples/: client.toml  server.toml
integrated-reasoning/: cross-platform-usb-virtualization_analysis.md
scripts/: install-service.sh  setup-udev.sh  uninstall-service.sh
systemd/: p2p-usb-server.service
