[package]
name = "client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "p2p-usb-client"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

rusb.workspace = true
iroh.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
async-channel.workspace = true
dirs.workspace = true
shellexpand.workspace = true
qrcode = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
byteorder.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile = "3.24"
