[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
protocol = { path = "../protocol" }

iroh.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
tokio.workspace = true
serde.workspace = true
