[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde_bytes = "0.11"
tokio = { workspace = true, optional = true }

[features]
default = ["async"]
async = ["tokio"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "serialization"
harness = false
